<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/menu">

   <item
        android:id="@+id/disable_enable_gyro"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/disable_enable_gyro"/>
    
        <item
        android:id="@+id/check_game"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/check_game"/>
    
           <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/help"/>
    
           <item
        android:id="@+id/show_hint"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/show_hint"/>
    
        
</menu>
